# python-etl-script-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/notebooks/scripts/: create_book.py  create_kernel.py
{{cookiecutter.project_slug}}/script/: main.py
{{cookiecutter.project_slug}}/script/core/: __init__.py  config.py  logger.py
{{cookiecutter.project_slug}}/script/managers/: __init__.py  database.py  query.py
{{cookiecutter.project_slug}}/tests/: test_database_manager.py  test_query_manager.py
{{cookiecutter.project_slug}}/utils/: notebook_commands.py
